# legume

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  GME.py  LICENSE  README.md  README_FOR_INSTALLATION.txt  example.py  gme.py  guided_modes.py  guided_modes_draft.py  phc.py  pyproject.toml  requirements.txt  setup.py  shapes.py  test_gme.ipynb  test_notebook.ipynb  test_phc.ipynb  utils.py
Notebooks/: 01 - Shapes and layers.ipynb  01 - Shapes, layers and photonic crystals.ipynb  02 - Plane-wave expansion - 2D PhC.ipynb  03 - Guided-mode expansion - asymmetric grating.ipynb  03 - Guided-mode expansion - multi-layer grating.ipynb  05 - Guided-mode expansion with Autograd.ipynb  Aurograd_PWE_circle.ipynb  Aurograd_PWE_poly.ipynb  Autograd_BIC.ipynb  Autograd_PhC_waveguide.ipynb  BC_test1.ipynb  BC_test1.ipynb.orig  Compare_guided_modes.ipynb  Demo_shapes.ipynb  Demo_shapes_layers.ipynb  Grating_asymmetric.ipynb  PhC_waveguide.ipynb  Test_PWE_supercell.ipynb  pwe_autograd.ipynb  test_autograd.ipynb  test_gme.ipynb  test_phc.ipynb  test_pwe.ipynb
chickpea/: __init__.py  fields.py  utils.py
chickpea_docs/: Field_in_Waveguides.ipynb  Fields_Tutorial_Cavity.ipynb
core/: __init__.py  backend.py  gme.py  guided_modes.py  phc.py  primitives.py  pwe.py  shapes.py  utils.py
docs/: api.rst  conf.py  examples.rst  faq.rst  index.rst  installation.rst  motivation.rst  requirements.txt
examples/: W1_gme.py  filtered_symmetric_H0.25_W0.50.csv  filtered_symmetric_partial_etch_H0.25_W0.50_D0.25.csv  grating_bands.csv  grating_bands_filtered.csv  grating_gme.py  grating_pwe.py  grating_symmetric_gme.py  grating_validation_comsol.py  opt_grating_polygons.py  opt_phc_slab_polygons.py  optimize_grating.py  optimize_phc.py  phc_slab.py  simple_phc_slab.py  slab.py  slab_gme_hex.py  unfiltered_symmetric_H0.25_W0.50.csv
legume/: __init__.py  backend.py  constants.py  fields.py  gds.py  gme.py  gme_old.py  guided_modes_old.py  lattice.py  layer.py  matrix_elements.py  minimize.py  optimizers.py  phc.py  primitives.py  print_backend.py  print_utils.py  pwe.py  shapes.py  slab_modes.py  utils.py  viz.py
pygme/: __init__.py  (+16 more)
(+80 files in other folders)
