[tool.poetry]
name = "legume-gme-tocha"
version = "0.2.0"
description = "Guided-mode expansion for 2.5D photonic crystals."
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "legume"}]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
autograd = "^1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
bumpversion = "^0.6.0"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
